# PhotoFlow

./: .gitignore  PROJECT_CONTEXT.md  README.md  generate-icons.cjs  generate-icons.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.vue  api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  scanner.rs  thumbnail.rs
src/components/: PhotoGallery.vue  PhotoViewer.vue  SearchBar.vue  SettingsView.vue  Sidebar.vue  TagManager.vue  ThumbnailCard.vue  TimelineView.vue
src/composables/: useTauriEvents.ts
src/stores/: appStore.ts  photoStore.ts
