[package]
name = "photoflow"
version = "1.0.0"
edition = "2021"

[lib]
name = "photoflow_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
image = "0.25"
turbojpeg = "1"
kamadak-exif = "0.5"
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
tokio = { version = "1", features = ["rt"] }
base64 = "0.22"
rfd = "0.15"
http = "1"
